# FastAPI-Project-01

./: .env  README.md  all_todos.csv  pyproject.toml  todobase.db
todos/: db.py  main.py  schemas.py
